--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.2.1"
+    "vue": "^2.2.1",
+    "vue-resource": "^1.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
